# thaw

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs
apps/desktop/src/components/: AccountForm.tsx  BankStatementUpload.tsx  BudgetCalculator.tsx  PlanResults.tsx  ReviewExtraction.tsx  SettingsPanel.tsx  SetupScreen.tsx  StatementUpload.tsx  ThawLogo.tsx  TitleBar.tsx
apps/desktop/src/lib/: commands.ts  pdf.ts
docs/: architecture.md  payoff-math.md
services/extractor/: README.md
